prevent the sidebar from overflowing (#244)

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -36,6 +36,7 @@
         margin: 0;
         width: 100%;
         max-width: 100%;
+        min-width: inherit;
     }
     .sidebar {
         border: none;
